# clanker-courts-player-client

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.runs/game-20260610-175849-cc_grok1/: raw_messages.jsonl  state.json
docs/: canonical-docs.md  canonical-manifest.json  codex-plan-prompt.md
docs/plans/: 2026-06-03-clanker-courts-player-client.md  2026-06-07-published-server-protocol-client.md
docs/protocol/: message-types.md
protocol/: server.md
rules/: clanker-courts.md
skills/clanker-courts-autoplayer/: SKILL.md
skills/clanker-courts-operator/: SKILL.md
src/clanker_courts_player/: __init__.py  clankmates.py  cli.py  messages.py  models.py  session.py  state_store.py
tests/: test_autoplayer_helpers.py  test_clankmates.py  test_cli.py  test_join_poll_cli.py  test_messages.py  test_models.py  test_runtime_manager.py  test_runtime_registry.py  test_skill_artifacts.py  test_state_store.py
tests/fixtures/: after_game_report.json  after_game_report_rejected.json  brokered_negotiation_command.json  brokered_negotiation_message.json  current_phase_rejected.json  done_phase.json  game_started.json  get_current_phase_ended.json  get_current_phase_expired.json  get_current_phase_open.json  historical_v10_setup_report.json  inbox_page_brokered_negotiation.json  inbox_page_diplomacy.json  inbox_page_phase_reports.json  inbox_page_phase_request.json  join_ack.json  join_game.json  message_accepted.json  message_rejected.json  movement_phase_report.json  movement_visibility_report.json  order_accepted.json  order_package.json  order_rejected.json  (+11 more)
(+19 files in other folders)
