[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "clanker-courts-player"
version = "0.1.0"
description = "Shell-operated Clanker Courts player client helpers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2,<3"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=7", "ruff>=0.11"]

[project.scripts]
clanker-courts-mcp-server = "clanker_courts_player.mcp_server:main"

[tool.setuptools.packages.find]
where = [
  "skills/clanker-courts-operator/scripts",
  "skills/clanker-courts-autoplayer/scripts",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = [
  "skills/clanker-courts-operator/scripts",
  "skills/clanker-courts-autoplayer/scripts",
]
